************************************
CHANGES IN VERSION 3.0.2

NEW FEATURES

   o Update columns/scale/name in general stats (#77)

   o Add more steps in gene-base saturation for reads number <10M (#82)

************************************
CHANGES IN VERSION 3.0.1

NEW FEATURES

   o Add disclamer in log and mqc report for devel

   o Update R output with counts and annotation

   o Add gene body coverage tool (RSeQC)

   o Add HiSat2 for hg19, hg19_base, hg38, mm9, mm10

   o Add tools.config [#56]

   o Support sample_plan and reads as input [#60]

   o Update conda environment

   o Remove picard from multiQC report

   o Add gene-based saturation curves [#57]

   o Add gene type expression (gencode) [#58]

   o Add exploratory analysis in multiQC report [#44]

BUG FIXES

   o Fix minor bugs [#48, #62, #63]

***********************************
CHANGES IN VERSION 3.0.0dev

NEW FEATURES

   o Initialise release of RNA-seq pipeline


