@@ -8,6 +8,9 @@ read_count_multiplier: 0.000001
 read_count_prefix: 'M'
 read_count_desc: 'millions'
 
+###################################
+## Custom content
+
 custom_data:
     my_stats:
         file_format: 'csv'
@@ -19,11 +22,8 @@ custom_data:
             id: 'stats'
             title: 'General Statistics'
             save_file: true
+            col1_header: 'Sample ID'
         headers:
-            Sample_id:
-              title: 'Sample ID'
-              scale: False
-              placement: 1000
             Sample_name:
               title: 'Sample Name'
               scale: False
@@ -139,6 +139,54 @@ sp:
    gene_saturation:
       fn: '*gcurve.txt'
 
+
+table_cond_formatting_rules:
+    Percent_of_rRNA:
+        pass:
+            - lt: 10
+        warn:
+            - gt: 10
+        fail:
+            - gt: 20
+    Percent_of_aligned_reads:
+        pass:
+            - gt: 80
+        warn:
+            - lt: 80
+        fail:
+            - lt: 70
+    Percent_uniquely_aligned_reads:
+        pass:
+            - gt: 80
+        warn:
+            - lt: 80
+        fail:
+            - lt: 70
+    Percent_multiple_aligned:
+        pass:
+            - lt: 20
+        warn:
+            - gt: 20
+        fail:
+            - gt: 30
+    Percent_duplicates:
+        pass:
+            - lt: 15
+        warn:
+            - gt: 15
+        fail:
+            - gt: 30
+
+
+################################
+## Clean sample names
+
+extra_fn_clean_exts:
+    - 'gcurve.txt'
+
+###############################
+## Modules 
+
 module_order:
   - fastqc
   - bowtie1:
@@ -156,6 +204,23 @@ module_order:
   - preseq:
      name: 'Sequencing Complexity'
      info: 'estimates the complexity of a library, showing how many additional unique reads are sequenced for increasing total read count. A shallow curve indicates complexity saturation. The dashed line shows a perfectly complex library where total reads = unique reads. The presented graph shows extrapolated curves up to 200M sequencing reads.'
+
+
+#custom_plot_config:
+#   bowtie1_alignment:
+#     reads_aligned:
+#       - color: '#d84e2f'
+#     multimapped:
+#       - color: '#f2e63f'
+#     not_aligned:
+#       - color: '#8bbc21'
+
+#   rseqc_read_distribution_plot:
+#     cds_exons_tag_count:
+#        color: 'black'
+
+#############################
+## Display
 
 report_section_order:
   stats:
