@@ -18,13 +18,15 @@ params {
   max_time = 1.h
 
   // Input data
+  /*
   readPaths = [
     ['SRR1106775_1', ["$baseDir/test-op/data/SRR1106775-1M_1.fastq.gz", "$baseDir/test-op/data/SRR1106775-1M_2.fastq.gz"]],
     ['SRR1106776_1', ["$baseDir/test-op/data/SRR1106776-1M_1.fastq.gz", "$baseDir/test-op/data/SRR1106776-1M_2.fastq.gz"]]
    ]
-   
+  */
+  samplePlan = "$baseDir/test-op/sampleplan.csv"
   // Metadata
-  metadata = "$baseDir/test-op/data/metadata.tsv"
+  metadata = "$baseDir/test-op/metadata.tsv"
 
   // Annotations
   genome =  'mm10'
