@@ -1,0 +1,2 @@
+SRR1106775_1,sample_test1,test-op/data/SRR1106775-1M_1.fastq.gz,test-op/data/SRR1106775-1M_2.fastq.gz
+SRR1106776_1,sample_test2,test-op/data/SRR1106776-1M_1.fastq.gz,test-op/data/SRR1106776-1M_2.fastq.gz
